welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: Missing closing brace `}' assumed here
var biscuit Int=0
^RunFour:2: error: illegal start of simple pattern
var biscuit Int=0
               ^RunFour:3: error: '=' expected but ';' found.
if (biscuit == 4 ) {
^