welcome.lessons.welcome.variables.RunFour.scala.code
var biscuit Int=0
if (biscuit == 4 ) {
	
}else {
	
	if (estSurBiscuit()) {
		biscuit= biscuit+1
	} else {
		avance()
}
